@@ -9,6 +9,7 @@ Bugs fixed:
 - 1440183 Fixed chunking related HTTP problems.
 - 1481081 Fixed garbage CMPIPrincipal in providers
 - 1201656 Fixed missing association problem.
+- 1439399 Fixed datetime key handling
 
 Changes in 1.1.0
 ================
