@@ -1,3 +1,8 @@
+2006-06-21  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
+
+	* cimXmlGen.c, objectpath.c, objectImpl.c: 
+	Fixed 1439399: sfcb doesn't support datetime for keys.
+
 2006-05-24  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>
 
 	* classProvider.c, classProviderGz.c: 
